--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <p>Psychoacoustics is fundamental to the MP3 encoding algorithm. The study of psychoacoustics reveals that the human mind and ear have inherent limitations. By understanding these limitations, we can eliminate or distort sound in a subtle and in some cases, unnoticeable manner in order to reduce file size. The primary psychoacoustics principles the MP3 encoding algorithm employ are the human frequency perception range and masking effects of sound due to human biology.</p>
 
         <p>Humans can only hear frequencies between 20Hz and 20kHz, anything outside of that range can be thrown away. Auditory masking occurs when humans have trouble distinguishing sound when the two frequencies are too similar. Temporal masking occurs when humans have trouble perceiving distinct sounds when they occur quickly one after another (5ms). The biology of the human ear prevents a quiet sound from being heard quickly after a loud sand and the way the human mind perceives sound prevents quite sound from being heard if a loud sound quickly follows.</p>
-        <p><img src="images/frequency-boundary.gif" /></p>
+        <p><img src="images/frequency-boundary.gif" /><br /><a href="http://oreilly.com/catalog/mp3/chapter/ch02.html">source</a></p>
         <h3>Bitrate</h3>
         <p>The bitrate is the number of bits per second sound is stored at. By reducing the bitrate, we can reduce the amount of space required to store the file. One way to reduce the bitrate is to apply the principles of psychoacoustics to remove the non-audible or barely audible parts of a recording.</p>
 
