--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h3>Bitrate</h3>
         <p>The bitrate is the number of bits per second sound is stored at. By reducing the bitrate, we can reduce the amount of space required to store the file. One way to reduce the bitrate is to apply the principles of psychoacoustics to remove the non-audible or barely audible parts of a recording.</p>
 
-        <p>There are two types of bitrate when it comes to encoding MP3, constant bitrate and variable bitrate. Constant bitrate encoding got a head start because it was more popular. The algorithm simply had to figure out which sounds to eliminate to ensure that the file is only predefined number of bits per second to store sound.</p>
+        <p>There are two types of bitrate when it comes to encoding MP3, constant bitrate and variable bitrate. Constant bitrate encoding got a head start because it much easier to implement. The algorithm simply had to figure out which sounds to eliminate to ensure that the file is only predefined number of bits per second to store sound.</p>
 
         <p>However, encoding efficiency could be dramatically improved the algorithm accounted for the complexity of sound at various parts of the file. For example, storing a few seconds of silence should take much few bits than a complicated percussion section. By adjusting the bitrate to accommodate for varying levels of complexity in sound, variable rate encoding can either produce files of equal sound fidelity to constant bit rate encoding at a smaller size or of increased sound fidelity given the same amount of space.</p>
 
