added stuff about ryu

--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
 
 
     <h3>Arstechnica</h3>
-    <p>Will Ryu of Arstechnica conducted one of the earliest MP3 quality experiments. He tested MP3s at 128kpbs, 160kbps, 192kbps and 256kbps and lossless CDs tracks on both his home stereo and Sony MDR-V6 headphones. However, he did know the quality ahead of time which means that these results are by no means scientific.</p>
-    <p>He claimed he had no touble distinguishing 128kbps MP3 audio from CD tracks. While it did get more difficult at higher bitrates, he believed he could still hear differences at 256kbps if he concentrated hard enough.</p>
+    <p>Will Ryu of Arstechnica conducted one of the earliest MP3 quality experiments. He tested MP3s at 128kpbs, 160kbps, 192kbps and 256kbps and lossless CDs tracks on both his home stereo and Sony MDR-V6 headphones. However, he did know the quality ahead of time which means that his conclusions should be taken with a grain of salt.</p>
+    <p>Ryu does offer a difference prespection. He claimed he had no touble distinguishing 128kbps MP3 audio from CD tracks. While it did get more difficult at higher bitrates, he believed he could still hear differences at 256kbps if he concentrated hard enough.</p>
     
 
     <h3>Studies Summary</h3>
